Revision history for Getopt-Modular

{{$NEXT}}
        + Add exception types.  Theoretically good for translatability
          (but you get to handle translations).
        + Add valid_values option

0.07    June 3, 2011
        * Fix some doc typos, add more explanation on how defaults are dynamic
        * Reorder revision history: new stuff at top.
        + Added import options: -namespace, -getOpt

0.06    October 28, 2010
        ! Remove the rest of the dependency on Contextual::Return since it
          no longer seems to work on perl 5.8.8

0.05    September 1, 2010
        ! Gotta run all tests prior to shipping.  Fixed an erroneous test.

0.04    August 31, 2010
        ! Fixed some tests: kwalitee didn't eval right, help didn't skip right.
        + Added some tests to improve test coverage
        ! Removed some (not all) dependency on Contextual::Return where it
          didn't seem to want to work properly.
        - Removed dependency on Smart::Comments since they're only used for
          debugging, not runtime.

0.03    July 24, 2008
        ! Removed some boilerplate
        * Defaults for boolean now show up in English rather than
          perl-bool (undef vs 1) in the help
        + Settable boolean text
        + Added getHelpWrap for Text::Wrapped help.

0.02    July 23, 2008
        ! Fixed missing pre-req
        + Added Changes 

0.01    July 22, 2008
        + Core functionality released

