@@ -25,6 +25,7 @@ match = ~$
 format = %-7v %{yyy-MM-dd}d
 
 [AutoPrereqs]
+skips = Test::Kwalitee
 
 [MetaResources]
 repository.type = git
